<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/subtotal_label"/>
            <EditText android:id="@+id/subtotal_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/subtotal_input_hint"
                android:inputType="numberDecimal"
                android:layout_weight="1"/>
        </LinearLayout>



        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fifteen_percent" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/twenty_percent" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/twenty_five_percent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tip_amount_label"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:textSize="50dp"
                android:gravity="right"
                android:text="0"
                android:layout_weight="2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_label"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:enabled="true"
                android:id="@+id/final_total"
                android:editable="false"
                android:layout_weight="1"
                android:inputType="numberDecimal" />
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>
